@@ -2,8 +2,12 @@ Change log for Defense Condition game project
 
 Author(s): Ray Gardener (support@daylongraphics.com)
 Repository: https://github.com/RayOfDaylon/Defcon
-September 13, 2023
+September 15, 2023
 
+
+Added help page for humans.
+
+Changed human texture to animated, more detailed version.
 
 Player ship appears redder as its shields weaken.
 
